--- a/index.html
+++ b/index.html
@@ -5,38 +5,238 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editor de memes</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <h1>Generador de memes</h1>
-      <button>
-        <img src="/iconos/img.png" alt="Icono Imagen" />
-        <h4>Imagen</h4>
-      </button>
-      <button>
-        <img src="/iconos/text.png" alt="Icono Texto" />
-        <h4>Texto</h4>
-      </button>
-      <button>
-        <img src="/iconos/mood.png" alt="Icono Modo Oscuro" />
-        <h4>Modo oscuro</h4>
-      </button>
+      <div class="div-button-header">
+        <button class="button-header" id="button-header-imagen">
+          <img src="./iconos/img.png" alt="Icono Imagen" />
+          <h4>Imagen</h4>
+        </button>
+        <button class="button-header" id="button-header-texto">
+          <img src="./iconos/text.png" alt="Icono Texto" />
+          <h4>Texto</h4>
+        </button>
+        <button class="button-header" id="button-header-mood">
+          <img src="./iconos/mood.png" alt="Icono Modo Oscuro" />
+          <h4>Modo oscuro</h4>
+        </button>
+      </div>
     </header>
     <main>
-      <section>
-        <div>
+      <section class="main-green">
+        <div class="main-img">
           <h2>TOP TEXT</h2>
-          <img src="" alt="" srcset="" />
+          <img src="" alt="" srcset="" class="meme-img" />
           <h2>BOTTOM TEXT</h2>
         </div>
-        <button>
-          <img src="/iconos/des.png" alt="Icono descargar" />
-          <h4>Descargar meme</h4>
+        <button class="descargar-button">
+          <img src="./iconos/des.png" alt="Icono descargar" />
+          Descargar meme
         </button>
       </section>
-      <aside>
-        <h3>Imagen</h3>
+      <aside class="main-aside">
+        <section id="section-img">
+          <h3>Imagen</h3>
+          <div>
+            <h4>URL</h4>
+            <input type="text" id="URL" name="URL" required />
+          </div>
+          <div>
+            <h4>FONDO</h4>
+            <div id="fondo-div">
+              <input type="color" id="color" name="color" />
+              <select name="fondo" id="fondo">
+                <option value="ninguno">Ninguno</option>
+                <option value="aclarar">Aclara</option>
+                <option value="oscurecer">Oscurecer</option>
+                <option value="diferenciar">Diferenciar</option>
+                <option value="luminosidad">Luminosidad</option>
+                <option value="multiplicar">Multiplicar</option>
+              </select>
+            </div>
+            <div>
+              <h4>FILTROS</h4>
+
+              <label for="brillo">
+                BRILLO
+                <input
+                  type="range"
+                  id="brillo"
+                  step="0.1"
+                  min="0"
+                  max="1"
+                  value="1"
+                />
+              </label>
+
+              <label for="opacidad">
+                OPACIDAD
+                <input
+                  type="range"
+                  id="opacidad"
+                  step="0.1"
+                  min="0"
+                  max="1"
+                  value="1"
+                />
+              </label>
+
+              <label for="contraste">
+                CONTRASTE
+                <input
+                  type="range"
+                  id="contraste"
+                  step="1%"
+                  min="100%"
+                  max="1000%"
+                  value="100%"
+                />
+              </label>
+
+              <label for="desenfoque">
+                DESENFOQUE
+                <input
+                  type="range"
+                  id="desenfoque"
+                  step="0.1px"
+                  min="0px"
+                  max="1px"
+                  value="0px"
+                />
+              </label>
+
+              <label for="escalaDeGrises">
+                ESCALA DE GRISES
+                <input
+                  type="range"
+                  id="Escala-de-grises"
+                  step="1%"
+                  min="0%"
+                  max="100%"
+                  value="0%"
+                />
+              </label>
+
+              <label for="sepia">
+                SEPIA
+                <input
+                  type="range"
+                  id="sepia"
+                  step="1%"
+                  min="0%"
+                  max="100%"
+                  value="0%"
+                />
+              </label>
+
+              <label for="hue">
+                HUE
+                <input
+                  type="range"
+                  id="hue"
+                  step="1deg"
+                  min="0deg"
+                  max="359deg"
+                  value="0deg"
+                />
+              </label>
+
+              <label for="saturacion">
+                SATURACION
+                <input
+                  type="range"
+                  id="saturacion"
+                  step="10%"
+                  min="100%"
+                  max="1000%"
+                  value="100%"
+                />
+              </label>
+
+              <label for="negativo">
+                NEGATIVO
+                <input
+                  type="range"
+                  id="negativo"
+                  step="0.1"
+                  min="0"
+                  max="1"
+                  value="1"
+                />
+              </label>
+            </div>
+          </div>
+        </section>
+        <section id="section-text">
+          <h3>TEXTO</h3>
+
+          <label for="superior"
+            >SUPERIOR
+            <input type="text" placeholder="TOP TEXT" />
+            <input
+              type="checkbox"
+              name="SinTextoSuperior"
+              id="SinTextoSuperior"
+            />
+            Sin texto superior
+          </label>
+
+          <label for="inferior"
+            >INFERIOR
+            <input type="text" placeholder="BOTTOM TEXT" />
+            <input
+              type="checkbox"
+              name="sinTextoInferior"
+              id="sinTextoInferior"
+            />
+            Sin texto inferior
+          </label>
+          <label for="fuente">
+            Fuente
+            <select name="fuente" id="fuente">
+              <option value="arial">ArialL</option>
+              <option value="arialBlack">Arial Black</option>
+              <option value="americanTypewriter">American Typewriter</option>
+              <option value="andaleMono">Andale Mono</option>
+              <option value="comicSansMs">Comic Sans MS</option>
+              <option value="helvetica">Helvetica</option>
+              <option value="impact">Impact</option>
+              <option value="verdana">Verdana</option>
+              <option value="timesNewRoman">Times New Roman</option>
+            </select>
+            <input type="number" />
+          </label>
+          <div>
+            <label for="color">
+              COLOR
+              <input type="color" />
+            </label>
+            <label for="fondo"
+              >Fondo
+              <input type="color" />
+            </label>
+            <input type="checkbox" />Fondo transparente
+            <label for="contorno">
+              CONTORNO
+              <input type="text" placeholder=" Ninguno" />
+              <input type="text" placeholder="Claro" />
+              <input type="text" placeholder="Oscuro" />
+            </label>
+            <label for="espaciado">
+              ESPACIADO
+              <input type="number" />
+            </label>
+            <label for="interlineado">
+              INTERLINEADO
+              <input type="number" />
+            </label>
+          </div>
+        </section>
       </aside>
     </main>
+    <script src="add.js"></script>
   </body>
 </html>
