--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
       <section class="main-green">
         <div class="meme" id="meme">
           <h2 class="top-text" id="top-text">TOP TEXT</h2>
-          <img src="" alt="" srcset="" class="meme-img" id="meme-img" />
+          <div src="" alt="" class="meme-img" id="meme-img"></div>
           <h2 class="bottom-text" id="bottom-text">BOTTOM TEXT</h2>
         </div>
         <button class="button-descargar" id="button-descargar">
-          <img src="./iconos/des.png" alt="Icono descargar" />
+          <img
+            src="./iconos/des.png"
+            alt="Icono descargar"
+            id="img-button-des"
+          />
           Descargar meme
         </button>
       </section>
@@ -75,14 +79,19 @@
           <div>
             <h4>FONDO</h4>
             <div class="fondo-div">
-              <input type="color" id="color" name="color" class="color" />
-              <select name="fondo" id="fondo" class="select">
-                <option value="ninguno">Ninguno</option>
-                <option value="aclarar">Aclara</option>
-                <option value="oscurecer">Oscurecer</option>
-                <option value="diferenciar">Diferenciar</option>
-                <option value="luminosidad">Luminosidad</option>
-                <option value="multiplicar">Multiplicar</option>
+              <input
+                type="color"
+                id="color-background-meme"
+                name="color"
+                class="color"
+              />
+              <select name="fondo" id="efecto-background-meme" class="select">
+                <option value="unset">Ninguno</option>
+                <option value="lighten">Aclarar</option>
+                <option value="darken">Oscurecer</option>
+                <option value="difference">Diferencia</option>
+                <option value="luminosity">Luminosidad</option>
+                <option value="multiply">Multiplicar</option>
               </select>
             </div>
             <div>
@@ -120,10 +129,10 @@
                   class="range"
                   type="range"
                   id="contraste"
-                  step="1%"
-                  min="100%"
-                  max="1000%"
-                  value="100%"
+                  step="1"
+                  min="100"
+                  max="1000"
+                  value="100"
                 />
               </label>
 
@@ -133,10 +142,10 @@
                   class="range"
                   type="range"
                   id="desenfoque"
-                  step="0.1px"
-                  min="0px"
-                  max="1px"
-                  value="0px"
+                  step="0.1"
+                  min="0"
+                  max="1"
+                  value="0"
                 />
               </label>
 
@@ -145,11 +154,11 @@
                 <input
                   class="range"
                   type="range"
-                  id="Escala-de-grises"
+                  id="escalaDeGrises"
                   step="1%"
-                  min="0%"
-                  max="100%"
-                  value="0%"
+                  min="0"
+                  max="100"
+                  value="0"
                 />
               </label>
 
@@ -159,10 +168,10 @@
                   class="range"
                   type="range"
                   id="sepia"
-                  step="1%"
-                  min="0%"
-                  max="100%"
-                  value="0%"
+                  step="1"
+                  min="0"
+                  max="100"
+                  value="0"
                 />
               </label>
 
@@ -172,10 +181,10 @@
                   class="range"
                   type="range"
                   id="hue"
-                  step="1deg"
-                  min="0deg"
-                  max="359deg"
-                  value="0deg"
+                  step="1"
+                  min="0"
+                  max="359"
+                  value="0"
                 />
               </label>
 
@@ -185,10 +194,10 @@
                   class="range"
                   type="range"
                   id="saturacion"
-                  step="10%"
-                  min="100%"
-                  max="1000%"
-                  value="100%"
+                  step="10"
+                  min="100"
+                  max="1000"
+                  value="100"
                 />
               </label>
 
@@ -201,12 +210,12 @@
                   step="0.1"
                   min="0"
                   max="1"
-                  value="1"
+                  value="0"
                 />
               </label>
             </div>
           </div>
-          <button class="reestablecer" id="reestablecer">
+          <button class="reestablecer" id="reestablecerButton">
             REESTABLECER FILTROS
           </button>
         </section>
