--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
           Descargar meme
         </button>
       </section>
-      <aside class="main-aside">
+      <aside class="main-aside" id="aside">
+        <img
+          src="./iconos/cerrarNegro.png"
+          alt="Boton cerrar"
+          class="cerrar-button"
+          id="cerrar-button"
+        />
         <section id="section-img">
           <h3>Imagen</h3>
           <div>
@@ -261,22 +267,22 @@
             FUENTE
 
             <select name="fuente" id="fuente" class="select">
-              <option value="arial">Arial</option>
-              <option value="arialBlack">Arial Black</option>
-              <option value="americanTypewriter">American Typewriter</option>
-              <option value="andaleMono">Andale Mono</option>
-              <option value="comicSansMs">Comic Sans MS</option>
-              <option value="helvetica">Helvetica</option>
-              <option value="impact">Impact</option>
-              <option value="verdana">Verdana</option>
-              <option value="timesNewRoman">Times New Roman</option>
+              <option value="Arial">Arial</option>
+              <option value=">Arial Black">Arial Black</option>
+              <option value=">American Typewriter">American Typewriter</option>
+              <option value="Andale Mono">Andale Mono</option>
+              <option value="Comic Sans MS">Comic Sans MS</option>
+              <option value="Helvetica">Helvetica</option>
+              <option value="Impact">Impact</option>
+              <option value="Verdana">Verdana</option>
+              <option value="Times New Roman">Times New Roman</option>
             </select>
             <div class="parrafo">
               <input
                 type="number"
                 type="number"
                 class="number"
-                id="fuente"
+                id="fuente-size"
                 step="1"
                 min="12"
                 max="100"
@@ -296,23 +302,29 @@
           <div class="div50">
             <label for="color">
               COLOR
-              <input type="color" />
+              <input type="color" id="color-fuente" value="#000000" />
             </label>
             <label for="fondo"
               >FONDO
-              <input type="color" />
+              <input type="color" id="color-fondo" value="#d9d9d9" />
             </label>
           </div>
           <label class="checkbox">
-            <input type="checkbox" />
+            <input type="checkbox" id="fondo-transparente" />
             Fondo transparente
           </label>
-          <label for="contorno">
+          <div class="contorno">
             CONTORNO
-            <input type="text" placeholder=" Ninguno" />
-            <input type="text" placeholder="Claro" />
-            <input type="text" placeholder="Oscuro" />
-          </label>
+            <div class="contorno-opciones">
+              <button id="ningun-contorno" class="boton-contorno">
+                Ninguno
+              </button>
+              <button id="contorno-claro" class="boton-contorno">Claro</button>
+              <button id="contorno-oscuro" class="boton-contorno">
+                Oscuro
+              </button>
+            </div>
+          </div>
           <label for="espaciado">
             ESPACIADO
             <input
@@ -323,7 +335,7 @@
               step="1"
               min="10"
               max="50"
-              value="35"
+              value="10"
             />
           </label>
           <label for="interlineado">
